--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -8,3 +8,85 @@
   font-weight: normal;
   font-style: normal;
 }
+
+.icon-cv{
+  font-family: 'cv';
+}
+
+.icon-cafe:before {
+  content: "\e600";
+}
+
+.icon-cellphone:before {
+  content: "\e601";
+}
+
+.icon-check:before {
+  content: "\e602";
+}
+
+.icon-compass:before {
+  content: "\e603";
+}
+
+.icon-computer:before {
+  content: "\e604";
+}
+
+.icon-config:before {
+  content: "\e605";
+}
+
+.icon-dialog:before {
+  content: "\e606";
+}
+
+.icon-eye:before {
+  content: "\e607";
+}
+
+.icon-heart:before {
+  content: "\e608";
+}
+
+.icon-light:before {
+  content: "\e609";
+}
+
+.icon-lightning:before {
+  content: "\e60a";
+}
+
+.icon-pen:before {
+  content: "\e60b";
+}
+
+.icon-photo:before {
+  content: "\e60c";
+}
+
+.icon-puzzle:before {
+  content: "\e60d";
+}
+
+.icon-settings:before {
+  content: "\e60e";
+}
+
+.icon-star:before {
+  content: "\e60f";
+}
+
+.icon-trophy:before {
+  content: "\e610";
+}
+
+.icon-window:before {
+  content: "\e611";
+}
+
+.icon-zoom:before {
+  content: "\e612";
+}
+
+
