--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -5,6 +5,7 @@
 
 @import "variables";
 @import "compass/reset";
+@import "compass/css3/animation";
 @import "bootstrap";
 @import "fonts";
 @import "curriculum";
