--- a/sass/_curriculum.scss
+++ b/sass/_curriculum.scss
@@ -122,8 +122,21 @@
     font-size:12px;
   }
   .description{
+    border: solid 2px transparentize(#000, 0.9);
     border-top: none;
     background: transparentize(#fff,0.2);
+    color:#000;
+    padding: 10px 18px 10px;
+    a{
+      &,&:link,&:visited{
+        text-decoration: none;
+        color:inherit;
+        font-weight: 700;
+      }
+      &:hover{
+      }
+
+    }
   }
   .icon-cv{
     float:right;
