--- a/sass/_curriculum.scss
+++ b/sass/_curriculum.scss
@@ -127,6 +127,9 @@
     background: transparentize(#fff,0.2);
     color:#000;
     padding: 10px 18px 10px;
+    img,iframe{
+      display: inline-block;
+    }
     a{
       &,&:link,&:visited{
         text-decoration: none;
