--- a/css/screen.css
+++ b/css/screen.css
@@ -8246,12 +8246,12 @@ button.close {
   }
 }
 /* line 14, ../sass/bootstrap/mixins/_clearfix.scss */
-.clearfix:before, .clearfix:after {
+.clearfix:before, .dialog .description:before, .clearfix:after, .dialog .description:after {
   content: " ";
   display: table;
 }
 /* line 19, ../sass/bootstrap/mixins/_clearfix.scss */
-.clearfix:after {
+.clearfix:after, .dialog .description:after {
   clear: both;
 }
 
@@ -9003,17 +9003,18 @@ button.close {
   color: #000;
   padding: 10px 18px 10px;
 }
-/* line 130, ../sass/_curriculum.scss */
+/* line 131, ../sass/_curriculum.scss */
 .dialog .description img, .dialog .description iframe {
   display: inline-block;
+  float: right;
 }
-/* line 134, ../sass/_curriculum.scss */
+/* line 136, ../sass/_curriculum.scss */
 .dialog .description a, .dialog .description a:link, .dialog .description a:visited {
   text-decoration: none;
   color: inherit;
   font-weight: 700;
 }
-/* line 144, ../sass/_curriculum.scss */
+/* line 146, ../sass/_curriculum.scss */
 .dialog .icon-cv {
   float: right;
   margin: 0 -10px;
@@ -9037,6 +9038,17 @@ header {
 h1 {
   font-weight: 900;
   font-size: 200px;
+}
+
+/* line 15, ../sass/_main.scss */
+img#panpan {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  -webkit-transform: scale(0.1);
+  -ms-transform: scale(0.1);
+  -o-transform: scale(0.1);
+  transform: scale(0.1);
 }
 
 /* line 1, ../sass/_header.scss */
