--- a/sass/_curriculum.scss
+++ b/sass/_curriculum.scss
@@ -127,8 +127,10 @@
     background: transparentize(#fff,0.2);
     color:#000;
     padding: 10px 18px 10px;
+    @extend .clearfix;
     img,iframe{
       display: inline-block;
+      float: right;
     }
     a{
       &,&:link,&:visited{
