--- a/sass/_curriculum.scss
+++ b/sass/_curriculum.scss
@@ -119,7 +119,7 @@
   h3{
     border-top: none;
     background: transparentize(#000, 0.9);
-    font-size:12px;
+    font-size:16px;
   }
   .description{
     border: solid 2px transparentize(#000, 0.9);
@@ -142,6 +142,9 @@
       }
 
     }
+  }
+  em{
+    font-style: italic;
   }
   .icon-cv{
     float:right;
