--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,20 +1,118 @@
-body,html{
-  overflow: hidden;
-  height:100%;
+@import "compass/css3/animation";
+@import "compass/css3/transition";
+
+@keyframes wave {
+  0%{
+    background-position: 0 bottom;
+  }
+  100%{
+    background-position: 32px bottom;
+  }
 }
+
 header{
-  width:760px;
-  max-width: 100%;
-  margin: auto;
-  text-align: center;
+  padding: 40px 0;
+  h1,h2{
+    @extend .container-fluid;
+    font-size:32px;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin: 0;
+  }
+  h1{
+    div{
+      @extend .col-md-6;
+      @extend .col-sm-6;
+      @extend .col-xs-6;
+      font-weight: 900;
+      + div{
+        text-align: right;
+      }
+    }
+  }
+  h2{
+    font-weight: 300;
+    > div{
+      float:right;
+      > div{
+        float:left;
+        padding: 0 $grid-gutter-width/2;
+      }
+    }
+  }
 }
-h1{
-  font-weight: 900;
-  font-size:200px;
+
+.main{
+  @extend .container-fluid;
+  .super-group{
+    margin: 0 0 40px;
+    @include clearfix;
+  }
+  .group{
+    @extend .col-md-4;
+    @extend .col-sm-6;
+    margin: 0 0 40px;
+  }
+  &,h3,h4,p{
+    font-size: 16px;
+    line-height: 20px;
+    margin: 0;
+  }
+  h4{
+    font-weight: 500;
+  }
+  h3{
+    font-weight: 700;
+    padding: 0 0 20px;
+    margin: 0 0 20px;
+    display: inline-block;
+    background: url(../images/underline.svg) repeat-x 0 bottom;
+    @include animation(wave 2s infinite linear);
+  }
+  p{
+    font-weight: 300;
+  }
+  li{
+    margin: 0 0 20px;
+  }
+  a{
+    @include transition;
+    &:hover{
+      text-decoration:none;
+    }
+  }
+
 }
-img#panpan{
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
-  @include scale(.1);
+
+@media screen and (max-width: $screen-xs-max){
+  body{
+    > .container{
+      padding-left:0;
+      padding-right:0;
+    }
+  }
+  header{
+    h1,h2{
+    }
+    h1{
+      div{
+        font-size:24px;
+        width:100%;
+        text-align: left !important;
+      }
+      div:first-child{
+        font-weight: 300;
+      }
+    }
+    h2{
+      font-size:16px;
+      > div{
+        float: left;
+        padding: 0 0 0 $grid-gutter-width/2;
+        > div{
+          padding: 0 5px 0 0;
+        }
+      }
+    }
+  }
 }
