--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -8,6 +8,7 @@
 @import "compass/css3/animation";
 @import "bootstrap";
 @import "fonts";
+@import "font-awesome/font-awesome";
 @import "curriculum";
 @import "main";
 @import "header";
