--- a/sass/print.scss
+++ b/sass/print.scss
@@ -1,3 +1,13 @@
 /* Welcome to Compass. Use this file to define print styles.
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" /> */
+
+@import "variables";
+@import "compass/reset";
+@import "compass/css3/animation";
+@import "bootstrap";
+@import "fonts";
+@import "font-awesome/font-awesome";
+@import "curriculum";
+@import "main";
+@import "header";
