--- a/sass/_bootstrap.scss
+++ b/sass/_bootstrap.scss
@@ -5,7 +5,7 @@
 // Reset and dependencies
 @import "bootstrap/normalize";
 @import "bootstrap/print";
-@import "bootstrap/glyphicons";
+//@import "bootstrap/glyphicons";
 
 // Core CSS
 @import "bootstrap/scaffolding";
@@ -17,6 +17,7 @@
 @import "bootstrap/buttons";
 
 // Components
+/*
 @import "bootstrap/component-animations";
 @import "bootstrap/dropdowns";
 @import "bootstrap/button-groups";
@@ -38,12 +39,15 @@
 @import "bootstrap/responsive-embed";
 @import "bootstrap/wells";
 @import "bootstrap/close";
+*/
 
 // Components w/ JavaScript
+/*
 @import "bootstrap/modals";
 @import "bootstrap/tooltip";
 @import "bootstrap/popovers";
 @import "bootstrap/carousel";
+*/
 
 // Utility classes
 @import "bootstrap/utilities";
