--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -102,7 +102,9 @@ header{
   .contact{
     @extend .col-md-8;
   }
-
+  .camouflage{
+    color:inherit;
+  }
 }
 
 @media screen and (max-width: $screen-xs-max){
