--- a/sass/print.scss
+++ b/sass/print.scss
@@ -48,7 +48,7 @@ header{
     margin: 0 0 1rem;
   }
 }
-.portfolio{
+.link-portfolio{
   display: none;
 }
 .col-sm-6, .main .group, header h1 div{
